--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ocultar archivos de documentación del repo
+CSS_CLASES_DOC.md
+DOCUMENTACION_PROYECTO.md
+EVALUACION_PROYECTO.md
